--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,3 +9,10 @@ repos:
         args: [ --fix ]
     # Run the formatter.
     -   id: ruff-format
+-   repo: local
+    hooks:
+    -   id: pytest
+        name: pytest
+        entry: ./venv/bin/python -m pytest
+        language: system
+        pass_filenames: false
