Adding prefiltering to Docker and everything

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,9 @@ version: "3.9"
 
 services:
   rss-morning:
-    build: .
+    build:
+      context: .
+      args:
+        OPENAI_API_KEY: ${OPENAI_API_KEY?Set OPENAI_API_KEY before building}
     image: rss-morning:local
     restart: "no"
