--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 annotated-types==0.7.0
 anyio==4.11.0
+beautifulsoup4==4.12.3
+bs4==0.0.2
 cachetools==6.2.1
 certifi==2025.10.5
 cffi==2.0.0
@@ -53,6 +55,7 @@ sendgrid==6.12.5
 sgmllib3k==1.0.0
 six==1.17.0
 sniffio==1.3.1
+soupsieve==2.8
 tenacity==9.1.2
 tomli==2.3.0
 tqdm==4.67.1
