--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,13 @@ cffi==2.0.0
 cfgv==3.4.0
 chardet==5.2.0
 charset-normalizer==3.4.4
+click==8.3.0
 cryptography==46.0.3
 cssselect==1.3.0
 distlib==0.4.0
 distro==1.9.0
 exceptiongroup==1.3.0
+feedfinder2==0.0.4
 feedparser==6.0.12
 filelock==3.20.0
 google-auth==2.41.1
@@ -23,16 +25,21 @@ httpx==0.28.1
 identify==2.6.15
 idna==3.11
 iniconfig==2.3.0
+jieba3k==0.35.1
 Jinja2==3.1.6
 jiter==0.11.1
+joblib==1.5.2
 lxml==6.0.2
 lxml_html_clean==0.4.3
 MarkupSafe==3.0.3
+newspaper3k==0.2.8
+nltk==3.9.2
 nodeenv==1.9.1
 numpy==2.2.6
 openai==2.6.0
 packaging==25.0
 pandas==2.3.3
+pillow==12.0.0
 platformdirs==4.5.0
 pluggy==1.6.0
 pre_commit==4.3.0
@@ -48,7 +55,9 @@ python-http-client==3.3.7
 pytz==2025.2
 PyYAML==6.0.3
 readability-lxml==0.8.4.1
+regex==2025.10.23
 requests==2.32.5
+requests-file==3.0.1
 resend==2.17.0
 rsa==4.9.1
 sendgrid==6.12.5
@@ -57,6 +66,8 @@ six==1.17.0
 sniffio==1.3.1
 soupsieve==2.8
 tenacity==9.1.2
+tinysegmenter==0.3
+tldextract==5.3.0
 tomli==2.3.0
 tqdm==4.67.1
 typing-inspection==0.4.2
