--- a/requirements.txt
+++ b/requirements.txt
@@ -70,6 +70,7 @@ tinysegmenter==0.3
 tldextract==5.3.0
 tomli==2.3.0
 tqdm==4.67.1
+trafilatura==1.6.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
@@ -77,3 +78,4 @@ urllib3==2.5.0
 virtualenv==20.35.3
 websockets==15.0.1
 Werkzeug==3.1.3
+sqlalchemy
