--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 annotated-types==0.7.0
 anyio==4.11.0
-beautifulsoup4==4.12.3
+babel==2.17.0
+beautifulsoup4==4.14.2
+boto3==1.42.14
+botocore==1.42.14
 bs4==0.0.2
 cachetools==6.2.1
 certifi==2025.10.5
@@ -9,40 +12,59 @@ cfgv==3.4.0
 chardet==5.2.0
 charset-normalizer==3.4.4
 click==8.3.0
+coloredlogs==15.0.1
+courlan==1.3.2
 cryptography==46.0.3
 cssselect==1.3.0
+dateparser==1.2.2
 distlib==0.4.0
 distro==1.9.0
 exceptiongroup==1.3.0
+fastembed==0.7.4
 feedfinder2==0.0.4
 feedparser==6.0.12
 filelock==3.20.0
-google-auth==2.41.1
-google-genai==1.46.0
+flatbuffers==25.12.19
+fsspec==2025.12.0
+google-auth==2.45.0
+google-genai==1.56.0
 h11==0.16.0
+hf-xet==1.2.0
+htmldate==1.9.4
 httpcore==1.0.9
 httpx==0.28.1
+huggingface_hub==1.2.3
+humanfriendly==10.0
 identify==2.6.15
 idna==3.11
 iniconfig==2.3.0
 jieba3k==0.35.1
 Jinja2==3.1.6
 jiter==0.11.1
+jmespath==1.0.1
 joblib==1.5.2
+jusText==3.0.2
+loguru==0.7.3
 lxml==6.0.2
 lxml_html_clean==0.4.3
 MarkupSafe==3.0.3
+mmh3==5.2.0
+moto==5.1.18
+mpmath==1.3.0
 newspaper3k==0.2.8
 nltk==3.9.2
 nodeenv==1.9.1
-numpy==2.2.6
+numpy==2.3.4
+onnxruntime==1.23.2
 openai==2.6.0
 packaging==25.0
 pandas==2.3.3
-pillow==12.0.0
+pillow==11.3.0
 platformdirs==4.5.0
 pluggy==1.6.0
 pre_commit==4.3.0
+protobuf==6.33.2
+py_rust_stemmers==0.1.5
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.23
@@ -59,24 +81,33 @@ regex==2025.10.23
 requests==2.32.5
 requests-file==3.0.1
 resend==2.17.0
+responses==0.25.8
 rsa==4.9.1
+s3transfer==0.16.0
 sendgrid==6.12.5
 sgmllib3k==1.0.0
+shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.8
+SQLAlchemy==2.0.45
+sympy==1.14.0
 tenacity==9.1.2
+tiktoken==0.12.0
 tinysegmenter==0.3
+tld==0.13.1
 tldextract==5.3.0
+tokenizers==0.22.1
 tomli==2.3.0
 tqdm==4.67.1
-trafilatura==1.6.0
+trafilatura==2.0.0
+typer-slim==0.20.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
+tzlocal==5.3.1
 urllib3==2.5.0
 virtualenv==20.35.3
 websockets==15.0.1
 Werkzeug==3.1.3
-sqlalchemy
-tiktoken
+xmltodict==1.0.2
