--- a/requirements.txt
+++ b/requirements.txt
@@ -102,6 +102,7 @@ tomli==2.3.0
 tqdm==4.67.1
 trafilatura==2.0.0
 typer-slim==0.20.1
+types-requests==2.32.4.20250913
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
@@ -111,5 +112,3 @@ virtualenv==20.35.3
 websockets==15.0.1
 Werkzeug==3.1.3
 xmltodict==1.0.2
-scikit-learn
-matplotlib
